llvm/test/tools/llubi/byval_mismatch1.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @callee(ptr byval(i32) %p) {
  ret void
}

define void @main() {
  %alloc = alloca i32
  call void @callee(ptr %alloc)
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @callee(ptr %alloc) at @main <stdin>:10
; CHECK-NEXT: Immediate UB detected: Mismatched byval attribute between callee and callsite.
; CHECK-NEXT: error: Execution of function 'main' failed.
